# aiogram_broadcaster

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
aiogram_broadcaster/: __init__.py  base.py  broadcaster.py  defaults.py  exceptions.py  message_broadcaster.py  text_broadcaster.py  types.py
aiogram_broadcaster/broadcast/: __init__.py  base_broadcast.py  message_broadcast.py  text_broadcast.py
aiogram_broadcaster/storage/: __init__.py  base_storage.py  memory_storage.py
examples/: base_usage.py  broadcaster_args_example.py  broadcasting_handler.py  variables_example.py  variables_example_2.py
