[tool.poetry]
name = "aiogram_broadcaster"
version = "0.0.1"
description = "Simple and lightweight library based on aiogram for creating telegram mailings"
authors = ["F0rzend"]
readme = "README.md"
repository = "https://github.com/fonco/aiogram-broadcaster/"
keywords = [
    "telegram",
    "bot",
    "api",
    "asyncio",
    "aiogram",
    "broadcaser",
    "broadcast",
    "mailing",
]


[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
